@@ -2,7 +2,7 @@
 									</tr>
 								</table>
 							</td>
-							<td class="sideColumn"></td>
+							<td class="sideColumn right"></td>
 						</tr>
 					</table>
 				</div>
